--- a/confirmation.html
+++ b/confirmation.html
@@ -65,13 +65,13 @@
           <!-- macro: booking__breadcrumbs -->
           <ol class="row no-gutters booking__breadcrumbs">
             <li class="col-4 booking__breadcrumb">
-              <a class="done" href="/transfer.html">1. Vehicle</a>
+              <a class="done" href="transfer.html">1. Vehicle</a>
             </li>
             <li class="col-4 booking__breadcrumb">
-              <a class="done" href="/register.html">2. Register</a>
+              <a class="done" href="register.html">2. Register</a>
             </li>
             <li class="col-4 booking__breadcrumb">
-              <a class="done" href="/payment.html">3. Payment</a>
+              <a class="done" href="payment.html">3. Payment</a>
             </li>
           </ol>
           <!-- endmacro -->
