--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
             <div class="my-4">
               <!-- macro: booking__backnext -->
               <nav class="booking__backnext ">
-                <a href="/register.html" class="btn btn-link link-iconed booking__back">
+                <a href="register.html" class="btn btn-link link-iconed booking__back">
                   <!-- btn-disabled -->
                   <i class="icon icon-arrow_back"></i>
                   <span>Back</span>
