--- a/options.html
+++ b/options.html
@@ -64,13 +64,13 @@
         <!-- macro: booking__breadcrumbs -->
         <ol class="row no-gutters booking__breadcrumbs">
           <li class="col-4 booking__breadcrumb">
-            <a class="active" href="/options.html">1. Vehicle</a>
+            <a class="active" href="options.html">1. Vehicle</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="" href="/register.html">2. Register</a>
+            <a class="" href="register.html">2. Register</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="" href="/payment.html">3. Payment</a>
+            <a class="" href="payment.html">3. Payment</a>
           </li>
         </ol>
         <!-- endmacro -->
@@ -78,7 +78,7 @@
           <div class="col-lg-8">
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext ">
-              <a href="/transfer.html" class="btn btn-link link-iconed booking__back">
+              <a href="transfer.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
@@ -247,12 +247,12 @@
             </form>
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext my-4 hidden-md-down">
-              <a href="/transfer.html" class="btn btn-link link-iconed booking__back">
+              <a href="transfer.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
               </a>
-              <a href="/payment.html" class="btn btn-accent link-iconed booking__next">
+              <a href="payment.html" class="btn btn-accent link-iconed booking__next">
                 <!-- btn-disabled -->
                 <span>Payment Info</span>
                 <i class="icon icon-arrow_forward"></i>
@@ -328,12 +328,12 @@
             <!-- endmacro -->
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext mt-5 hidden-lg-up">
-              <a href="/transfer.html" class="btn btn-link link-iconed booking__back">
+              <a href="transfer.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
               </a>
-              <a href="/payment.html" class="btn btn-accent link-iconed booking__next">
+              <a href="payment.html" class="btn btn-accent link-iconed booking__next">
                 <!-- btn-disabled -->
                 <span>Payment Info</span>
                 <i class="icon icon-arrow_forward"></i>
@@ -459,12 +459,12 @@
             </form>
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext my-4 hidden-lg-up">
-              <a href="/transfer.html" class="btn btn-link link-iconed booking__back">
+              <a href="transfer.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
               </a>
-              <a href="/payment.html" class="btn btn-accent link-iconed booking__next">
+              <a href="payment.html" class="btn btn-accent link-iconed booking__next">
                 <!-- btn-disabled -->
                 <span>Payment Info</span>
                 <i class="icon icon-arrow_forward"></i>
