--- a/payment.html
+++ b/payment.html
@@ -64,13 +64,13 @@
         <!-- macro: booking__breadcrumbs -->
         <ol class="row no-gutters booking__breadcrumbs">
           <li class="col-4 booking__breadcrumb">
-            <a class="done" href="/transfer.html">1. Vehicle</a>
+            <a class="done" href="transfer.html">1. Vehicle</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="done" href="/register.html">2. Register</a>
+            <a class="done" href="register.html">2. Register</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="active" href="/payment.html">3. Payment</a>
+            <a class="active" href="payment.html">3. Payment</a>
           </li>
         </ol>
         <!-- endmacro -->
@@ -78,7 +78,7 @@
           <div class="col">
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext ">
-              <a href="/options.html" class="btn btn-link link-iconed booking__back">
+              <a href="options.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
@@ -179,12 +179,12 @@
                 <div class="col-12 col-lg-5 offset-lg-1">
                   <!-- macro: booking__backnext -->
                   <nav class="booking__backnext mt-4 mb-5">
-                    <a href="/options#options.html" class="btn btn-link link-iconed booking__back">
+                    <a href="options#options.html" class="btn btn-link link-iconed booking__back">
                       <!-- btn-disabled -->
                       <i class="icon icon-arrow_back"></i>
                       <span>Back</span>
                     </a>
-                    <a href="/confirmation.html" class="btn btn-accent link-iconed booking__next">
+                    <a href="confirmation.html" class="btn btn-accent link-iconed booking__next">
                       <!-- btn-disabled -->
                       <span>Complete Booking</span>
                       <i class="icon icon-arrow_forward"></i>
