--- a/register.html
+++ b/register.html
@@ -64,13 +64,13 @@
         <!-- macro: booking__breadcrumbs -->
         <ol class="row no-gutters booking__breadcrumbs">
           <li class="col-4 booking__breadcrumb">
-            <a class="done" href="/options.html">1. Vehicle</a>
+            <a class="done" href="options.html">1. Vehicle</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="active" href="/register.html">2. Register</a>
+            <a class="active" href="register.html">2. Register</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="" href="/payment.html">3. Payment</a>
+            <a class="" href="payment.html">3. Payment</a>
           </li>
         </ol>
         <!-- endmacro -->
@@ -78,7 +78,7 @@
           <form class="col form-validate">
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext ">
-              <a href="/options.html" class="btn btn-link link-iconed booking__back">
+              <a href="options.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
@@ -98,7 +98,7 @@
                 </div>
                 <!-- macro: booking__backnext -->
                 <nav class="booking__backnext mt-5 pb-0 hidden-md-down">
-                  <a href="/options#options.html" class="btn btn-link link-iconed booking__back">
+                  <a href="options#options.html" class="btn btn-link link-iconed booking__back">
                     <!-- btn-disabled -->
                     <i class="icon icon-arrow_back"></i>
                     <span>Back</span>
@@ -156,7 +156,7 @@
                 <!-- endmacro: form_group -->
                 <!-- macro: booking__backnext -->
                 <nav class="booking__backnext mt-5 pb-0 hidden-md-down">
-                  <a href="/payment.html" class="btn btn-accent link-iconed booking__next">
+                  <a href="payment.html" class="btn btn-accent link-iconed booking__next">
                     <!-- btn-disabled -->
                     <span>Next Step</span>
                     <i class="icon icon-arrow_forward"></i>
@@ -167,12 +167,12 @@
             </div>
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext col my-5 hidden-lg-up">
-              <a href="/options#options.html" class="btn btn-link link-iconed booking__back">
+              <a href="options#options.html" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
               </a>
-              <a href="/payment.html" class="btn btn-accent link-iconed booking__next">
+              <a href="payment.html" class="btn btn-accent link-iconed booking__next">
                 <!-- btn-disabled -->
                 <span>Next Step</span>
                 <i class="icon icon-arrow_forward"></i>
