--- a/transfer.html
+++ b/transfer.html
@@ -64,13 +64,13 @@
         <!-- macro: booking__breadcrumbs -->
         <ol class="row no-gutters booking__breadcrumbs">
           <li class="col-4 booking__breadcrumb">
-            <a class="active" href="/transfer.html">1. Vehicle</a>
+            <a class="active" href="transfer.html">1. Vehicle</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="" href="/options.html">2. Register</a>
+            <a class="" href="options.html">2. Register</a>
           </li>
           <li class="col-4 booking__breadcrumb">
-            <a class="" href="/payment.html">3. Payment</a>
+            <a class="" href="payment.html">3. Payment</a>
           </li>
         </ol>
         <!-- endmacro -->
@@ -78,7 +78,7 @@
           <div class="col-lg-8">
             <!-- macro: booking__backnext -->
             <nav class="booking__backnext ">
-              <a href="/#book" class="btn btn-link link-iconed booking__back">
+              <a href="#book" class="btn btn-link link-iconed booking__back">
                 <!-- btn-disabled -->
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
@@ -300,7 +300,7 @@
                 <i class="icon icon-arrow_back"></i>
                 <span>Back</span>
               </a>
-              <a href="/options.html#options" class="btn btn-accent link-iconed booking__next">
+              <a href="options.html#options" class="btn btn-accent link-iconed booking__next">
                 <!-- btn-disabled -->
                 <span>Next Step</span>
                 <i class="icon icon-arrow_forward"></i>
